# RosAGV

./: .gitignore  .gitmodules  frames.gv
src/agv/: CMakeLists.txt  package.xml
src/agv/include/agv/: clamp_controller.h  motor_controller.h  range_sensor.h
src/agv/launch/: agv.launch.py
src/agv/src/controller/: clamp_controller.cpp  motor_controller.cpp  range_sensor.cpp
src/agv/src/nodes/: camera.cpp  clamp.cpp  controller.cpp  range.cpp
src/agv_sim/: CMakeLists.txt  package.xml
src/agv_sim/launch/: dolly.launch.py
src/agv_sim/src/: controller.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp
src/debug/: CMakeLists.txt  package.xml
src/debug/src/: camera_view.cpp
src/dolly/dolly/: package.xml
src/dolly/dolly_gazebo/: package.xml
src/dolly/dolly_gazebo/launch/: dolly.launch.py
src/dolly/dolly_gazebo/models/dolly/: model.sdf  model.urdf  model_no_macro.urdf
src/dolly/dolly_gazebo/models/dolly/config/: ekf.yaml
src/dolly/dolly_gazebo/rviz/: dolly_gazebo.rviz
src/dolly/dolly_gazebo/worlds/: warehouse.world
src/gpio/: CMakeLists.txt  package.xml
src/gpio/src/controller/: motor_controller.cpp
src/gpio/src/nodes/: led.cpp  movement.cpp
src/gps/: CMakeLists.txt  package.xml
src/gps/src/: gps.cpp
src/object_detection/: .gitignore  package.xml  setup.py
src/object_detection/object_detection/: object_detection.py
test/: test.py
